try a fix for dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1520,19 +1520,17 @@ h2 code {
     color: #187367;
   }
 
-  html[data-theme="dark"] {
-    .sidebar-promo-teal,
-    a.sidebar-promo-teal:link,
-    a.sidebar-promo-teal:visited,
-    a.sidebar-promo-teal:active {
-      border-color: #71E8DF;
-      color: #71E8DF;
-    }
+  html[data-theme="dark"] .sidebar-promo-teal,
+  html[data-theme="dark"] a.sidebar-promo-teal:link,
+  html[data-theme="dark"] a.sidebar-promo-teal:visited,
+  html[data-theme="dark"] a.sidebar-promo-teal:active {
+    border-color: #71E8DF;
+    color: #71E8DF;
+  }
 
-    a.sidebar-promo-teal:hover {
-      border-color: #B7F4EE;
-      color: #B7F4EE;
-    }
+  html[data-theme="dark"] a.sidebar-promo-teal:hover {
+    border-color: #B7F4EE;
+    color: #B7F4EE;
   }
 
   /* indigo color */
@@ -1549,18 +1547,16 @@ h2 code {
     color: #4C51BF;
   }
 
-  html[data-theme="dark"] {
-    .sidebar-promo-indigo,
-    a.sidebar-promo-indigo:link,
-    a.sidebar-promo-indigo:visited,
-    a.sidebar-promo-indigo:active {
-      border-color: #7F9CF5;
-      color: #7F9CF5;
-    }
+  html[data-theme="dark"] .sidebar-promo-indigo,
+  html[data-theme="dark"] a.sidebar-promo-indigo:link,
+  html[data-theme="dark"] a.sidebar-promo-indigo:visited,
+  html[data-theme="dark"] a.sidebar-promo-indigo:active {
+    border-color: #7F9CF5;
+    color: #7F9CF5;
+  }
 
-    a.sidebar-promo-indigo:hover {
-      border-color: #C3DAFE;
-      color: #C3DAFE;
-    }
+  html[data-theme="dark"] a.sidebar-promo-indigo:hover {
+    border-color: #C3DAFE;
+    color: #C3DAFE;
   }
 }
